# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.436 2012/10/11 16:50:53 mgorny Exp $

  11 Oct 2012; Michał Górny <mgorny@gentoo.org> eutils.eclass:
  prune_libtool_files(): fix removing symlinked .la files.

  08 Oct 2012; Michał Górny <mgorny@gentoo.org> +autotools-multilib.eclass:
  Introduce autotools-multilib, to simplify building multilib packages with
  autotools-utils.

  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Revert virtual/fortran depends again, because not only USE=fortran controlls
  fortran needs

  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Depend on virtual/fortran eclass wise but in an USE=fortran sensitive way,
  #435250

  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Revert last change to not break packages with optional fortran support

  07 Oct 2012; Michał Górny <mgorny@gentoo.org> boost-utils.eclass:
  Fix stupid mistake in boost-utils_get_best_slot().

  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Depend on virtual/fortran eclass wise, #435250

  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Give some information on selected fortran compilers

  03 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  virtualx.eclass:
  Unbreak EAPI=2 and 3 users of virtualx.eclass, bug #406353

  02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> obs-download.eclass:
  More update the doc

  02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> obs-service.eclass:
  Always use openSUSE:Tools as project to get updates. Remove obs_package
  declaration as it is equal to pn.

  02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> obs-download.eclass:
  Change the documentation a bit and take OBS_PACKAGE from PN if not set.

  02 Oct 2012; Michael Palimaka <kensington@gentoo.org> cmake-utils.eclass,
  virtualx.eclass: